--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,12 +34,10 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "dev.danfq.vaultify"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
+        compileSdkVersion = 33
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
