--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   flutter_vector_icons: ^2.0.0
   fluttertoast: ^8.2.8
   settings_ui: ^2.0.2
+  future_progress_dialog: ^0.2.1
+  encrypt: ^5.0.3
+  sensitive_clipboard: ^1.0.0
 
 dev_dependencies:
   flutter_test:
