--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   encrypt: ^5.0.3
   sensitive_clipboard: ^1.0.0
   swipeable_button_view: ^0.0.2
+  pinput: ^5.0.0
+  native_auth: ^1.0.6
 
 dev_dependencies:
   flutter_test:
