--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   swipeable_button_view: ^0.0.2
   pinput: ^5.0.0
   native_auth: ^1.0.6
+  flutter_stripe: ^11.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
