--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
   sensitive_clipboard: ^1.0.0
   swipeable_button_view: ^0.0.2
   pinput: ^5.0.0
-  native_auth: ^1.0.6
   flutter_stripe: ^11.0.0
   http: ^1.2.2
+  biometricx: ^0.0.2
+  native_auth: ^1.0.6
 
 dev_dependencies:
   flutter_test:
