--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   local_auth: ^2.3.0
   package_info_plus: ^8.0.2
   url_launcher: ^6.3.0
+  salomon_bottom_bar: ^3.3.2
+  animated_custom_dropdown: ^3.1.1
 
 dev_dependencies:
   flutter_test:
