--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.3.0
   salomon_bottom_bar: ^3.3.2
   animated_custom_dropdown: ^3.1.1
+  mailto: ^2.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
