--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,11 @@ dependencies:
   animated_custom_dropdown: ^3.1.1
   mailto: ^2.0.0
   intl: ^0.18.1
-  simple_speed_dial: ^0.1.7
   file_picker: ^8.1.2
   permission_handler: ^11.3.1
   csv: ^6.0.0
   toastification: ^2.3.0
+  animated_expandable_fab: ^0.0.3
 
 dev_dependencies:
   flutter_test:
