--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   csv: ^6.0.0
   toastification: ^2.3.0
   animated_expandable_fab: ^0.0.3
+  pointycastle: ^3.9.1
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
