--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -3,8 +3,17 @@
 <plist version="1.0">
 <dict>
 
-	<key>com.apple.security.network.client</key>
+	<key>com.apple.security.app-sandbox</key>
     <true/>
+    <key>com.apple.security.network.client</key>
+    <true/>
+    <key>com.apple.security.keychain</key>
+    <true/>
+
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(TeamIdentifierPrefix)com.vaultify.macos</string>
+	</array>
 
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
