--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   animated_expandable_fab: ^0.0.3
   pointycastle: ^3.9.1
   flutter_secure_storage: ^9.2.2
+  tray_manager: ^0.3.0
 
 dev_dependencies:
   flutter_test:
