--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   pointycastle: ^3.9.1
   flutter_secure_storage: ^9.2.2
   tray_manager: ^0.3.0
+  random_password_generator: ^0.2.1
 
 dev_dependencies:
   flutter_test:
