--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   tray_manager: ^0.3.0
   random_password_generator: ^0.2.1
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
